--- a/webframe/src/main/webapp/moduel/index/css/index.css
+++ b/webframe/src/main/webapp/moduel/index/css/index.css
@@ -186,7 +186,7 @@ body {
 
 
 #menu {
-	background:#FF6B6B;
+	background:rgba(255, 107, 107, 0.1);
 	padding:10px 0px;
 	/* position:fixed; */
 	top:0;
