--- a/webframe/src/main/webapp/WEB-INF/view/common/head_jquery.vm
+++ b/webframe/src/main/webapp/WEB-INF/view/common/head_jquery.vm
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
-<link rel="icon" href="$!{static}/common/img/icon.gif" type="image/gif" />
+<link rel="icon" href="$!{static}/img/icon.gif" type="image/gif" />
 <link rel="stylesheet" type="text/css" href="/css/font.css" />
 
-<script src="$!{static}/common/js/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="$!{static}/js/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="/moduel/console/dom-animator.js" type="text/javascript"></script>
 <script src="/js/run.js" type="text/javascript"></script>
